--- a/guess-the-number/style.css
+++ b/guess-the-number/style.css
@@ -9,3 +9,8 @@
 input {
   @apply flex h-10 w-full rounded-md border border-neutral-400 bg-neutral-50 px-3 py-2 text-sm ring-offset-neutral-50 placeholder:text-neutral-400 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50;
 }
+
+#gameContainer {
+  position: relative;
+  right: 1500px;
+}
